sync v0.17.0
- update travis jdk
- move doc to docs